kubernetes/apps/observability/k8s-dashboard/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-vs
  namespace: observability
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: logos:kubernetes
    hajimari.io/info: Kubernetes dashboard
    hajimari.io/group: admin
spec:
  hosts:
  - "dashboard.dagobah.internal"
  gateways:
  - observability-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - "dashboard.dagobah.internal"
    route:
    - destination:
        host: kubernetes-dashboard.observability.svc.cluster.local
        port:
          number: 443
      weight: 100
